Fix sub's overlap problem in a narrow screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ nav li {
   font-size: 1.5em;
   font-weight: bold;
   text-transform: capitalize;
+  min-width: 600px;
 }
 
 .header a {
@@ -207,6 +208,7 @@ li p {
     text-align: left;
     min-height: 100px;
     padding: 20px;
+    font-size: 1.2em;
   }
 
   .why li img {
@@ -225,5 +227,7 @@ li p {
 
   .footer {
     text-align: center;
+    display: flex;
+    flex-direction: column;
   }
 }
